--- a/.env
+++ b/.env
@@ -8,8 +8,9 @@ IAM_USER_SECRET=jA5KbEhRd9zduTydOF9ge/LGP4XV0P3JkSIsCdJ/
 
 JWT_KEY=ArunSecretKey
 
-PORT_NUMBER=8080
-DB_PASSWORD=lonewarrior70951 
+PORT_NUMBER=3000
+DB_PASSWORD=lonewarrior70951
 DB_NAME=expensetracker
 DB_USERNAME=admin
+DB_HOST=database-2.cebkjgbfuhx7.ap-south-1.rds.amazonaws.com
 
